Put all the images and lists for the recipes and removed eggrolls.html

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 
         <body>
             <h1>Odin Recipes</h1>
-            <p><a href="recipes/general-tso.html">General Tso's Chicken</a></p>
-            <p><a href="recipes/fried-chicken.html">Korean Fried Chicken</a></p>
-            <p><a href="recipes/bougatsa.html">Bougatsa</a></p>
+            <ul>
+            <li><a href="recipes/general-tso.html">General Tso's Chicken</a></li>
+           <li><a href="recipes/fried-chicken.html">Korean Fried Chicken</a></li>
+            <li><a href="recipes/bougatsa.html">Bougatsa</a></li>
+        </ul>
         </body>
     </html>
