--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
         <head>
             <meta charset="UTF-8">
             <title>Recipes</title>
+            <link rel="stylesheet" href="style.css">
         </head>
 
         <body>
-            <h1>Odin Recipes</h1>
+            <h1 id="title">Odin Recipes</h1>
             <ul>
-            <li><a href="recipes/general-tso.html">General Tso's Chicken</a></li>
-           <li><a href="recipes/fried-chicken.html">Korean Fried Chicken</a></li>
-            <li><a href="recipes/bougatsa.html">Bougatsa</a></li>
+            <li class="food"><a href="general-tso.html">General Tso's Chicken</a></li>
+           <li class="food"><a href="fried-chicken.html">Korean Fried Chicken</a></li>
+            <li class="food"><a href="bougatsa.html">Bougatsa</a></li>
         </ul>
         </body>
     </html>
